# whattimeisit

./: Makefile  README.md  pyproject.toml
src/timestr/: Date.py  Range.py  __init__.py
src/timestring/: Date.py  Range.py  __init__.py
src/whattimeisit/: Date.py  Range.py  __init__.py
tests/: test_timestring.py
